--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
     </table>
   </div>
 
-  <div style="margin-top:2rem;">
+
+  <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
     <a href="pedalboard" class="bx--btn bx--btn--secondary" type="button" aria-label="Start as Guest"
         style="display: flex; align-items: center; gap: 0.5rem;">
         <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
