--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
   <main id="page-content" style="margin-top:20px; text-align:center; margin-bottom:50px;">
     <div class="pedalplex-logo-fullscreen-menu"></div><br><br>
     <h1 style="font-size:2.25rem; font-weight:700;">Because Great Tones Deserve a Save Button.</h1>
-    <p style="font-size:1.25rem; margin-top:1rem; color:#666;">
-      Build, Tweak, Save your own Guitar & Bass setups - for free and without limits.
+    <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+      <!-- Build, Tweak, Save your own Guitar & Bass setups - for free and without limits. -->
+        Create a visual memory of your guitar and bass rigs.<br>
+        Save, recall, and rebuild your tones — even months later.
     </p>
 
     <!-- CTA buttons -->
@@ -46,10 +48,10 @@
                 <path d="M26,30H14a2,2,0,0,1-2-2V25h2v3H26V4H14V7H12V4a2,2,0,0,1,2-2H26a2,2,0,0,1,2,2V28A2,2,0,0,1,26,30Z"/>
                 <path d="M14.59 20.59L18.17 17 4 17 4 15 18.17 15 14.59 11.41 16 10 22 16 16 22 14.59 20.59z"/>
             </svg>
-            Login
+            PedalPlexer Login
         </a>
         <a href="#why-becoming-a-pedalplexer" aria-label="Why becoming a PedalPlexer?">
-          <svg style="margin-top: 10px; color: #666;" focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
+          <svg style="margin-top: 10px; color: #717171;" focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
             <path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path><circle cx="16" cy="23.5" r="1.5"></circle><path d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"></path>
             <title>Why becoming a PedalPlexer?</title>
           </svg>
@@ -63,6 +65,147 @@
         </a> -->
     </div>
   </main>
+
+    <!-- The problem -->
+<section id="the-problem" style="margin:5rem auto; max-width:800px; text-align:center;">
+  <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff;">Ever tried to recreate a great tone and couldn’t remember why it worked?</h2>
+  <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+      Photos freeze the past. MIDI saves machines.<br>
+      But your decisions live somewhere else.
+    </p>
+  <!-- Glow border container -->
+  <!-- <div style="
+    border-radius: 12px;
+    padding: 10px; /* thickness of glow */
+    background: linear-gradient(45deg, rgb(70, 41, 100), rgb(156, 84, 213), rgb(94, 226, 240));
+    box-shadow: 0 0 15px rgba(94, 226, 240, 0.6), 0 0 25px rgba(156, 84, 213, 0.4);
+  "> -->
+  <div class="pedalplex-glow">
+    <!-- Actual table -->
+    <table class="bx--data-table bx--data-table--zebra" style="
+      width:100%; 
+      text-align:center; 
+      background-color:#3a3a3a; 
+      color:#fff; 
+      border-radius:10px; 
+      overflow:hidden;
+    ">
+      <thead style="background-color:#2e2e2e; color:#fff;">
+        <tr>
+          <th scope="col" style="padding:12px;">Feature</th>
+          <th scope="col" style="padding:12px;">Photo</th>
+          <th scope="col" style="padding:12px;">MIDI</th>
+          <th scope="col" style="padding:12px;">PedalPlex</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Recall why your tone worked</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+          </td>
+        </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Works without specific hardware</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+          </td>
+        </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Version comparing</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+          </td>
+        </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Understandable after 6+ months</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+          </td>
+        </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Share with friends</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--A--><path d="M16 23a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 23zM15 12H17V21H15z"></path><path d="M29,30H3a1,1,0,0,1-.8872-1.4614l13-25a1,1,0,0,1,1.7744,0l13,25A1,1,0,0,1,29,30ZM4.6507,28H27.3493l.002-.0033L16.002,6.1714h-.004L4.6487,27.9967Z"></path>            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+
+  <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
+    <a href="pedalboard" class="bx--btn bx--btn--secondary" type="button" aria-label="Start as Guest"
+        style="display: flex; align-items: center; gap: 0.5rem;">
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+            <path d="M6.34 19H17.65V21H6.34z" transform="rotate(-45 11.995 20.002)"></path><path d="M17,30a1,1,0,0,1-.37-.07,1,1,0,0,1-.62-.79l-1-7,2-.28.75,5.27L21,24.52V17a1,1,0,0,1,.29-.71l4.07-4.07A8.94,8.94,0,0,0,28,5.86V4H26.14a8.94,8.94,0,0,0-6.36,2.64l-4.07,4.07A1,1,0,0,1,15,11H7.48L4.87,14.26l5.27.75-.28,2-7-1a1,1,0,0,1-.79-.62,1,1,0,0,1,.15-1l4-5A1,1,0,0,1,7,9h7.59l3.77-3.78A10.92,10.92,0,0,1,26.14,2H28a2,2,0,0,1,2,2V5.86a10.92,10.92,0,0,1-3.22,7.78L23,17.41V25a1,1,0,0,1-.38.78l-5,4A1,1,0,0,1,17,30Z"></path>
+        </svg>
+        Continue as Guest
+    </a>
+    <a href="login" class="bx--btn bx--btn--primary" type="button" aria-label="Login" 
+        style="display: flex; align-items: center; gap: 0.5rem;">
+        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+            <path d="M26,30H14a2,2,0,0,1-2-2V25h2v3H26V4H14V7H12V4a2,2,0,0,1,2-2H26a2,2,0,0,1,2,2V28A2,2,0,0,1,26,30Z"/>
+            <path d="M14.59 20.59L18.17 17 4 17 4 15 18.17 15 14.59 11.41 16 10 22 16 16 22 14.59 20.59z"/>
+        </svg>
+        Sign up for Free
+    </a>
+  </div>
+</section>
 
   <img src="logos/splash.png" alt="Splash image" style="width:100%; height:auto; margin-top:2rem;" />
 
