--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
     <!-- The problem -->
 <section id="the-problem" style="margin:5rem auto; max-width:800px; text-align:center;">
-  <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff;">Ever tried to recreate a great tone and couldn’t remember why it worked?</h2>
-  <p style="font-size:1.25rem; margin-top:1rem; color:#717171;">
+  <h2 style="font-size:2rem; color:#fff;">Ever tried to recreate a great tone and couldn’t remember why it worked?</h2>
+  <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
       Photos freeze the past. MIDI saves machines.<br>
       But your decisions live somewhere else.
     </p>
@@ -187,24 +187,6 @@
     </table>
   </div>
 
-
-  <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
-    <a href="pedalboard" class="bx--btn bx--btn--secondary" type="button" aria-label="Start as Guest"
-        style="display: flex; align-items: center; gap: 0.5rem;">
-        <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-            <path d="M6.34 19H17.65V21H6.34z" transform="rotate(-45 11.995 20.002)"></path><path d="M17,30a1,1,0,0,1-.37-.07,1,1,0,0,1-.62-.79l-1-7,2-.28.75,5.27L21,24.52V17a1,1,0,0,1,.29-.71l4.07-4.07A8.94,8.94,0,0,0,28,5.86V4H26.14a8.94,8.94,0,0,0-6.36,2.64l-4.07,4.07A1,1,0,0,1,15,11H7.48L4.87,14.26l5.27.75-.28,2-7-1a1,1,0,0,1-.79-.62,1,1,0,0,1,.15-1l4-5A1,1,0,0,1,7,9h7.59l3.77-3.78A10.92,10.92,0,0,1,26.14,2H28a2,2,0,0,1,2,2V5.86a10.92,10.92,0,0,1-3.22,7.78L23,17.41V25a1,1,0,0,1-.38.78l-5,4A1,1,0,0,1,17,30Z"></path>
-        </svg>
-        Continue as Guest
-    </a>
-    <a href="login" class="bx--btn bx--btn--primary" type="button" aria-label="Login" 
-        style="display: flex; align-items: center; gap: 0.5rem;">
-        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-            <path d="M26,30H14a2,2,0,0,1-2-2V25h2v3H26V4H14V7H12V4a2,2,0,0,1,2-2H26a2,2,0,0,1,2,2V28A2,2,0,0,1,26,30Z"/>
-            <path d="M14.59 20.59L18.17 17 4 17 4 15 18.17 15 14.59 11.41 16 10 22 16 16 22 14.59 20.59z"/>
-        </svg>
-        Sign up for Free
-    </a>
-  </div>
 </section>
 
   <img src="logos/splash.png" alt="Splash image" style="width:100%; height:auto; margin-top:2rem;" />
