--- a/index.html
+++ b/index.html
@@ -115,14 +115,33 @@
           </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>
+            </svg>
+          </td>
+        </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Recall tone versioning</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>
+            </svg>
           </td>
         </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Works without specific hardware</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>
             </svg>
           </td>
           <td style="padding:12px;">
@@ -132,11 +151,12 @@
           </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>
+            </svg>
           </td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Version comparing</td>
+          <td style="padding:12px;">Tones understandable after months</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
@@ -149,15 +169,16 @@
           </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>
+            </svg>
           </td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Understandable after 6+ months</td>
+          <td style="padding:12px;">Share with collaborators</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
-            </svg>
+            <!--A--><path d="M16 23a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 23zM15 12H17V21H15z"></path><path d="M29,30H3a1,1,0,0,1-.8872-1.4614l13-25a1,1,0,0,1,1.7744,0l13,25A1,1,0,0,1,29,30ZM4.6507,28H27.3493l.002-.0033L16.002,6.1714h-.004L4.6487,27.9967Z"></path>
+          </svg>
           </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
@@ -166,14 +187,16 @@
           </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>
+            </svg>
           </td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Share with friends</td>
+          <td style="padding:12px;">All-in-one tone organisation</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-            <!--A--><path d="M16 23a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 23zM15 12H17V21H15z"></path><path d="M29,30H3a1,1,0,0,1-.8872-1.4614l13-25a1,1,0,0,1,1.7744,0l13,25A1,1,0,0,1,29,30ZM4.6507,28H27.3493l.002-.0033L16.002,6.1714h-.004L4.6487,27.9967Z"></path>            </svg>
+            <!--X--><path d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12 S22.6,28,16,28z"></path><path d="M21.4 23L16 17.6 10.6 23 9 21.4 14.4 16 9 10.6 10.6 9 16 14.4 21.4 9 23 10.6 17.6 16 23 21.4z"></path>
+            </svg>
           </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
@@ -182,7 +205,8 @@
           </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>            </svg>
+            <!--V--><path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"></path><path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path>
+            </svg>
           </td>
         </tr>
       </tbody>
@@ -263,7 +287,7 @@
       </thead>
       <tbody>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Cross-device sync</td>
+          <td style="padding:12px;">Devices sync</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
               <path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
@@ -271,40 +295,40 @@
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
               <circle cx="16" cy="16" r="14"></circle>
-            </svg> Complete (cloud sync)</td>
+            </svg> Complete sync (Mobile, Tablet, Desktop)</td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Presets</td>
+          <td style="padding:12px;">Plexes</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
               <path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
-            </svg> 1 (view only)</td>
+            </svg> 1 (View only)</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
               <circle cx="16" cy="16" r="14"></circle>
-            </svg> Unlimited (cloud save)</td>
+            </svg> Unlimited</td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Pedalboards</td>
+          <td style="padding:12px;">Rigs</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
               <path d="M29.37,11.84a13.6,13.6,0,0,0-1.06-2.51A14.17,14.17,0,0,0,25.9,6.1a14,14,0,1,0,0,19.8,14.17,14.17,0,0,0,2.41-3.23,13.6,13.6,0,0,0,1.06-2.51,14,14,0,0,0,0-8.32ZM4,16A12,12,0,0,1,16,4V28A12,12,0,0,1,4,16Z"></path>
-            </svg> 1 (local save)</td>
+            </svg> 1 (Local)</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
               <circle cx="16" cy="16" r="14"></circle>
-            </svg> Unlimited (cloud save)</td>
+            </svg> Unlimited</td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Gears catalog</td>
+          <td style="padding:12px;">Gears</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
               <path d="M29.37,11.84a13.6,13.6,0,0,0-1.06-2.51A14.17,14.17,0,0,0,25.9,6.1a14,14,0,1,0,0,19.8,14.17,14.17,0,0,0,2.41-3.23,13.6,13.6,0,0,0,1.06-2.51,14,14,0,0,0,0-8.32ZM4,16A12,12,0,0,1,16,4V28A12,12,0,0,1,4,16Z"></path>
-            </svg> Limited (public gears only)</td>
+            </svg> Limited (Public only)</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
               <circle cx="16" cy="16" r="14"></circle>
-            </svg> Advanced (public, private and custom gears)</td>
+            </svg> Complete (Public, Private, Custom)</td>
         </tr>     
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Future features</td>
