--- a/index.html
+++ b/index.html
@@ -222,18 +222,15 @@
     <div class="bx--row">
       <div class="bx--col">
         <h3>Browse Gears</h3>
-        <p>Explore a growing library of pedals and effects.</p>
-        <p>Create your own pedals and amplifiers.</p>
+        <p>Explore a growing library of pedals and effects. Create your own pedals and amplifiers.</p>
       </div>
       <div class="bx--col">
         <h3>Build your Rigs</h3>
-        <p>Arrange gears to create a digital twin of your setup.</p>
-        <p>Create as many Rigs you want.</p>
+        <p>Arrange gears to create a digital twin of your setup. Create as many Rigs you want.</p>
       </div>
       <div class="bx--col">
         <h3>Save decision snapshots as Plexes</h3>
-        <p>Store your knob and switch settings for instant recall.</p>
-        <p>Organise your riffs and songs in a folders.</p>
+        <p>Store your knob and switch settings for instant recall. Organise your riffs and songs in a folders.</p>
       </div>
     </div>
   </section>
