--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <h2 style="font-size:2rem; color:#fff;">Ever tried to recreate a great tone and couldn’t remember why it worked?</h2>
   <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
       Photos freeze the past. MIDI saves machines.<br>
-      But your decisions live somewhere else.
+      <span style="color:#9C54D5">But your decisions live somewhere else.</span>
     </p>
   <!-- Glow border container -->
   <!-- <div style="
@@ -222,15 +222,15 @@
     <div class="bx--row">
       <div class="bx--col">
         <h3>Browse Gears</h3>
-        <p>Explore a growing library of pedals and effects. Create your own pedals and amplifiers.</p>
+        <p><span style="color:#9C54D5">Explore a growing library</span> of pedals and amplifiers. Create your own pedals and amplifiers.</p>
       </div>
       <div class="bx--col">
         <h3>Build your Rigs</h3>
-        <p>Arrange gears to create a digital twin of your setup. Create as many Rigs you want.</p>
+        <p>Arrange gears to create <span style="color:#9C54D5">digital twins of your Rigs</span>. Create as many Rigs you want.</p>
       </div>
       <div class="bx--col">
         <h3>Save decision snapshots as Plexes</h3>
-        <p>Store your knob and switch settings for instant recall. Organise your riffs and songs in a folders.</p>
+        <p><span style="color:#9C54D5">Store your knob and switch settings for instant recall</span>. Organise your riffs and songs in a folders.</p>
       </div>
     </div>
   </section>
