--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
   
 <section id="why-becoming-a-pedalplexer" style="margin:5rem auto; max-width:800px; text-align:center;">
-  <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff;">Why becoming a PedalPlexer?</h2>
+  <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff; font-weight:600">Why becoming a PedalPlexer?</h2>
 
   <!-- Glow border container -->
   <!-- <div style="
