changes in features description

--- a/index.html
+++ b/index.html
@@ -222,15 +222,21 @@
     <div class="bx--row">
       <div class="bx--col">
         <h3>Browse Gears</h3>
-        <p><span style="color:#9C54D5">Explore a growing library</span> of pedals and amplifiers. Create your own pedals and amplifiers.</p>
+        <p>
+          <span style="color:#9C54D5">Browse a growing library of pedals and amplifiers</span>. Visualize and customize their controls to match your real gear.
+        </p>
       </div>
       <div class="bx--col">
         <h3>Build your Rigs</h3>
-        <p>Arrange gears to create <span style="color:#9C54D5">digital twins of your Rigs</span>. Create as many Rigs you want.</p>
-      </div>
+        <p>
+          Arrange pedals and amps to <span style="color:#9C54D5">create faithful digital copies of your Rigs</span>. Build as many rigs as you need for your songs, riffs, and gigs.
+        </p>
+        </div>
       <div class="bx--col">
         <h3>Save decision snapshots as Plexes</h3>
-        <p><span style="color:#9C54D5">Store your knob and switch settings for instant recall</span>. Organise your riffs and songs in a folders.</p>
+        <p>
+          <span style="color:#9C54D5">Save your knob and switch settings</span> as Plexes for instant recall. Organize your riffs and songs in folders for easy access anytime.
+        </p>
       </div>
     </div>
   </section>
