--- a/preset.html
+++ b/preset.html
@@ -61,11 +61,6 @@
   <div id="page-content">
     <div id="preset-controls" style="display: none; align-items: center; gap: 8px;">
       <!-- Pedalboard selection -->
-       <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary" type="button" style="max-width:500px!important;">Rigs
-        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-          <path d="M14 26L15.41 24.59 7.83 17 28 17 28 15 7.83 15 15.41 7.41 14 6 4 16 14 26z"/>
-        </svg>   
-      </a> 
       <select id="pedalboardSelect"></select>
 
       <!-- Folder selection -->
@@ -110,11 +105,11 @@
         </svg>
       </button>
 
-      <a href="preset_catalog" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important; max-width:500px!important;">Add Plex from catalog
+       <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important; max-width:500px!important;">Back to Rigs
         <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
-          <path d="M26 30H24V20H12V30H10V20a2.0021 2.0021 0 012-2H24a2.0021 2.0021 0 012 2zM5.17 16L2 19.17 3.411 20.589 8 16 3.42 11.42 2 12.83 5.17 16zM24 14H12a2.0021 2.0021 0 01-2-2V2h2V12H24V2h2V12A2.0021 2.0021 0 0124 14z"></path>
+          <path d="M14 26L15.41 24.59 7.83 17 28 17 28 15 7.83 15 15.41 7.41 14 6 4 16 14 26z"/>
         </svg>   
-      </a>  
+      </a> 
   
     </div>
 
