test icon menu preset catalog hover mouse desktop

--- a/test_preset_catalog.html
+++ b/test_preset_catalog.html
@@ -111,10 +111,7 @@
       <title>Overflow menu horizontal</title>
     </svg>
     <ul class="preset-dropdown">
-      <li data-preset="Rock">Rock</li>
-      <li data-preset="Blues">Blues</li>
-      <li data-preset="Metal">Metal</li>
-      <li data-preset="Clean">Clean</li>
+      <button class="bx--tag bx--tag--cyan"><span class="bx--tag__label">news</span> <img src="svg/rss.svg" width="15px"></button>
     </ul>
   </div>
 </div>
