--- a/index.html
+++ b/index.html
@@ -238,6 +238,12 @@
           <span style="color:#9C54D5">Save your knob and switch settings</span> as Plexes for instant recall. Organize your riffs and songs in folders for easy access anytime.
         </p>
       </div>
+      <div class="bx--col">
+        <h3>Learn and be inspired by AI</h3>
+        <p>
+          <span style="color:#9C54D5">Art is human. No doubts.</span> AI is here to help you learn and get inspired. Discover new tone ideas and combinations based on your existing Plexes.
+        </p>
+      </div>
     </div>
   </section>
 
