--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </p>
         </div>
       <div class="bx--col">
-        <h3>Save decision snapshots as Plexes</h3>
+        <h3>Save decision as Plexes</h3>
         <p>
           <span style="color:#9C54D5">Save your knob and switch settings</span> as Plexes for instant recall. Organize your riffs and songs in folders for easy access anytime.
         </p>
