test icon positioning

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">
             Plexes catalog 
-            <svg class="preset-icon"
+            <svg style="vertical-align:middle" class="preset-icon"
               focusable="false"
               preserveAspectRatio="xMidYMid meet"
               width="32"
