edit table features

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
           </td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Works without specific hardware</td>
+          <td style="padding:12px;">Tones understandable after months</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-            <!--full--><circle cx="16" cy="16" r="14"></circle>
+            <!--empty--><path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
             </svg>
           </td>
           <td style="padding:12px;">
@@ -156,10 +156,10 @@
           </td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Tones understandable after months</td>
+          <td style="padding:12px;">Works without specific hardware</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-            <!--empty--><path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
+            <!--full--><circle cx="16" cy="16" r="14"></circle>
             </svg>
           </td>
           <td style="padding:12px;">
@@ -209,6 +209,24 @@
             </svg>
           </td>
         </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Learning and inspiration</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--empty--><path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--empty--><path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
+            </svg>
+          </td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+            <!--full--><circle cx="16" cy="16" r="14"></circle>
+            </svg>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -241,7 +259,7 @@
       <div class="bx--col">
         <h3>Learn and be inspired by AI</h3>
         <p>
-          <span style="color:#9C54D5">Art is human. No doubts.</span> AI is here to help you learn and get inspired. Discover new tone ideas and combinations based on your existing Plexes.
+          <span style="color:#9C54D5">Art is human, no doubts</span>. AI is here to help you learn and get inspired. Discover new tone ideas and combinations based on your existing Plexes.
         </p>
       </div>
     </div>
