--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <div class="bx--col">
         <h3>Learn and be inspired by AI</h3>
         <p>
-          <span style="color:#9C54D5">Art is human, no doubts</span>. AI is here to help you learn and get inspired. Discover new tone ideas and combinations based on your existing Plexes.
+          <span style="color:#9C54D5">Art is human, no doubts</span>. AI is here to help you learn and get inspired. Discover new tone ideas and combinations for your Plexes.
         </p>
       </div>
     </div>
