--- a/plexes.html
+++ b/plexes.html
@@ -143,8 +143,8 @@
 
   <!-- Fallback content -->
   <div id="noPedalboardsContainer" style="display: none; text-align: center; margin-top: 7em;">
-    <p style="font-size: 1.25em;">No pedalboards found.</p>
-    <a href="pedalboard.html" class="bx--btn bx--btn--primary" style="margin-top: 1em;">Manage Rigs</a>
+    <p style="font-size: 1.25em;">No Rig found.</p>
+    <a href="rigs" class="bx--btn bx--btn--primary" style="margin-top: 1em;">Manage Rigs</a>
   </div>
 
   <!-- Scripts -->
