--- a/rigs.html
+++ b/rigs.html
@@ -130,7 +130,7 @@
             <path d="M3,10V22a2.002,2.002,0,0,0,2,2H27a2.0023,2.0023,0,0,0,2-2V10a2.0027,2.0027,0,0,0-2-2H5A2.0023,2.0023,0,0,0,3,10Zm2,0,2,0V22H5ZM27,22H9V10H27Z"/>
           </svg>   
         </button>   
-        <a id="viewPreset" href="preset" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important;">Go to Plexes
+        <a id="viewPreset" href="plexes" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important;">Go to Plexes
           <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
             <path d="M18 6L16.57 7.393 24.15 15 4 15 4 17 24.15 17 16.57 24.573 18 26 28 16 18 6z"/>
           </svg>   
