--- a/rigs.html
+++ b/rigs.html
@@ -149,6 +149,7 @@
     <script src="fullscreen-menu.js"></script>
     <script src="nav-rigs.js"></script>
     <script src="rigs-dnd.js"></script>
+    <script src="add-to-rig.js"></script>
   </div>
 
     <div class="zoom-controls">  
@@ -170,6 +171,24 @@
     </div>
 
   <script src="zoom.js"></script>
+
+
+  <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const pending = JSON.parse(localStorage.getItem('pendingPedalAdd'));
+    if (!pending) return;
+
+    localStorage.removeItem('pendingPedalAdd');
+
+    if (window.pedalboard && window.pedalboard.pedals) {
+      window.pedalboard.pedals.push(pending);
+      renderPedalboard();
+    }
+  });
+  </script>
+
+
+
 
   <script>
   $(document).ready(function() {
