--- a/gears.html
+++ b/gears.html
@@ -112,7 +112,7 @@
   // Reset selected pedal when changing category
   $('#categoryFilter').on('change', () => {
     selectedPedalId = null;
-    $('#addToRig').fadeOut();
+    $('#addToRig').hide();
   });
 
 
