test add pending pedal

--- a/rigs.html
+++ b/rigs.html
@@ -150,6 +150,7 @@
     <script src="nav-rigs.js"></script>
     <script src="rigs-dnd.js"></script>
     <script src="add-to-rig.js"></script>
+    <script src="rigs-pending-add.js"></script>
   </div>
 
     <div class="zoom-controls">  
