--- a/plexes.html
+++ b/plexes.html
@@ -149,10 +149,10 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="utils.js"></script>
-  <script src="plexes.js"></script>
   <script src="test-plex.js"></script>
-  <script src="local-plexes.js"></script>
+  <script src="plexes.js"></script>
+  <script src="utils.js"></script>
+  <!-- <script src="local-plexes.js"></script> -->
   <script src="fullscreen-menu.js"></script>
   <script src="folder.js"></script>
   <script src="nav-plexes.js"></script>
