--- a/test.html
+++ b/test.html
@@ -3,9 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Test Single Pedal Auth</title>
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="utils.js"></script> <!-- renderFullPedalboard + helpers -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>PedalPlex</title>
+  <link rel="stylesheet" href="css/carbon-components.min.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="https://unpkg.com/carbon-components/scripts/carbon-components.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>   
+  <script src="utils.js"></script> <!-- renderFullPedalboard + helpers -->
 <style>
   body { font-family:sans-serif; padding:20px; }
   #results { margin-top: 20px; border: 1px solid #ccc; padding: 10px; min-height: 200px; }
