--- a/test.html
+++ b/test.html
@@ -19,7 +19,6 @@
 <body>
 
 <h1>TEST PEDALBOARD SINGLE PEDAL MODE (Auth)</h1>
-<div id="results">Caricamento pedalboard...</div>
 <div id="preset" style="flex-direction: column; align-items: center;"></div>
 
 <script>
@@ -129,4 +128,9 @@
 </script>
 
 </body>
+
+  <script src="fullscreen-menu.js"></script>
+  <script src="nav.js"></script>
+  <script src="zoom.js"></script>
+
 </html>
